# WhoseLIIA

./: README.md  input.txt  requirements.txt  setup.cfg  setup.py  stylometry.py
.github/workflows/: python-ci.yml  tests.yml
data/: clean_paradise_lost.py  paradise_lost_cleaned.txt
src/stylometry/: analyzer.py  d3_visualization.html  demo.py
src/stylometry/output/: d3_data.json  sample_title.csv  sample_title.json
tests/: test_analyzer.py
