[metadata]
name = stylometry-dh
version = 0.1
description = Stylometry analysis for digital humanities
author = Your Name

[options]
package_dir = 
    = src
packages = find:
install_requires =
    numpy>=1.21
    scikit-learn>=1.0

[options.extras_require]
test =
    pytest>=7.0

[options.packages.find]
where = src